--- a/examples/compareDB.html
+++ b/examples/compareDB.html
@@ -1,19 +1,117 @@
 <html>
 
 <head>
+
     <meta charset="utf-8">
-    <title>WAITER 許可証発行 DB比較</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>WAITER dashborad</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link href="./css/dashboard.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
 
 <body>
-    <div id="chartContainer1" style="width: 48%; height: 500px;display: inline-block;"></div>
-    <div id="chartContainer2" style="width: 48%; height: 500px;display: inline-block;"></div>
-    <div id="chartContainer3" style="width: 100%; height: 400px;display: inline-block;"></div>
+
+    <div id="wrapper">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WAITER dashborad</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+            </div>
+        </nav>
+
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input class="form-control" placeholder="リクエスト間隔(秒)">
+                            </div>
+
+                            <button type="button" class="btn btn-default" onclick="execute();">実行</button>
+                            <button type="button" class="btn btn-default" onclick="cancel();">中止</button>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">許可証発行数の遷移(直近10秒)</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer1" style="width: 100%; height: 500px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">許可証発行数の遷移</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer2" style="width: 100%; height: 500px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">レスポンスタイム平均値DB比較</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer3" style="width: 100%; height: 500px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </div>
+        <!-- /#page-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+    <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <script>
-        var time = new Date();
+        // 実行開始時からの経過時間
+        var time;
         var endpoint1 = 'https://waiter-prototype-development02.azurewebsites.net';
         var endpoint2 = 'https://waiter-prototype-development03.azurewebsites.net';
         var endpoint3 = 'https://waiter-prototype-development04.azurewebsites.net';
@@ -22,27 +120,38 @@
         var accessToken2;
         var accessToken3;
 
-        var numberOfPassportsIssuedWithMongoDB = 0;
-        var numberOfPassportsIssuedWithRedis = 0;
-        var numberOfPassportsIssuedWithSqlServer = 0;
+        var numberOfPassportsIssuedWithMongoDB;
+        var numberOfPassportsIssuedWithRedis;
+        var numberOfPassportsIssuedWithSqlServer;
 
-        var responseTimeMongoDB = 0;
-        var responseTimeRedis = 0;
-        var responseTimeSqlServer = 0;
+        var sumOfResponseTimesMongoDB;
+        var numberOfResponsesMongoDB;
+        var sumOfResponseTimesRedis;
+        var numberOfResponsesRedis;
+        var sumOfResponseTimesSqlServer;
+        var numberOfResponsesSqlServer;
 
-        $.ajax({
-            url: `${endpoint1}/oauth/token`,
-            method: 'POST',
-            data: {
-                grant_type: 'client_credentials',
-                client_id: 'motionpicture',
-                scope: ['admin']
-            }
-        }).done(function (data) {
-            accessToken1 = data.access_token;
+        var timerChart;
+        var timerMongoDB;
+        var timerRedis;
+        var timerSqlServer;
 
+        function execute() {
+            // データ初期化
+            time = new Date();
+            numberOfPassportsIssuedWithMongoDB = 0;
+            numberOfPassportsIssuedWithRedis = 0;
+            numberOfPassportsIssuedWithSqlServer = 0;
+            sumOfResponseTimesMongoDB = 0;
+            numberOfResponsesMongoDB = 0;
+            sumOfResponseTimesRedis = 0;
+            numberOfResponsesRedis = 0;
+            sumOfResponseTimesSqlServer = 0;
+            numberOfResponsesSqlServer = 0;
+
+            // アクセストークンを取得してからグラフ描画を始める
             $.ajax({
-                url: `${endpoint2}/oauth/token`,
+                url: `${endpoint1}/oauth/token`,
                 method: 'POST',
                 data: {
                     grant_type: 'client_credentials',
@@ -50,10 +159,10 @@
                     scope: ['admin']
                 }
             }).done(function (data) {
-                accessToken2 = data.access_token;
+                accessToken1 = data.access_token;
 
                 $.ajax({
-                    url: `${endpoint3}/oauth/token`,
+                    url: `${endpoint2}/oauth/token`,
                     method: 'POST',
                     data: {
                         grant_type: 'client_credentials',
@@ -61,19 +170,32 @@
                         scope: ['admin']
                     }
                 }).done(function (data) {
-                    accessToken3 = data.access_token;
+                    accessToken2 = data.access_token;
 
-                    startCharts();
+                    $.ajax({
+                        url: `${endpoint3}/oauth/token`,
+                        method: 'POST',
+                        data: {
+                            grant_type: 'client_credentials',
+                            client_id: 'motionpicture',
+                            scope: ['admin']
+                        }
+                    }).done(function (data) {
+                        accessToken3 = data.access_token;
+
+                        startCharts();
+                    });
                 });
             });
-        });
+        }
 
         function startCharts() {
             // チャート初期化
             var chart1 = new CanvasJS.Chart("chartContainer1",
                 {
-                    title: {
-                        text: "WAITER number of passports issued"
+                    axisY: {
+                        minimum: 0,
+                        // maximum: 300
                     },
                     data: [
                         {
@@ -104,8 +226,9 @@
                 });
             var chart2 = new CanvasJS.Chart("chartContainer2",
                 {
-                    title: {
-                        text: "WAITER number of passports issued2"
+                    axisY: {
+                        minimum: 0,
+                        // maximum: 300
                     },
                     data: [
                         {
@@ -135,54 +258,56 @@
                     ]
                 });
 
+            // レスポンスタイム平均値のバーチャート
+            var chart3 = new CanvasJS.Chart("chartContainer3", {
+                axisY: {
+                    minimum: 0,
+                    // maximum: 300
+                },
+                data: [{
+                    type: "bar",
+                    dataPoints: [
+                        { label: "MongoDB", y: 0 },
+                        { label: "Redis", y: 0 },
+                        { label: "SQL Server", y: 0 }
+                    ]
+                }]
+            });
 
             chart1.render();
             chart2.render();
-
-            setInterval(function () {
-                var chart3 = new CanvasJS.Chart("chartContainer3", {
-                    axisY: {
-                        minimum: 0,
-                        // maximum: 300
-                    },
-                    data: [{
-                        // type: 'column',
-                        type: "bar",
-
-                        // グラフに描画するデータを設定する
-                        dataPoints: [
-                            { label: "MongoDB", y: responseTimeMongoDB },
-                            { label: "Redis", y: responseTimeRedis },
-                            { label: "SQL Server", y: responseTimeSqlServer }
-                        ]
-                    }]
-                });
-                chart3.render();
-            }, 500);
+            chart3.render();
 
             // チャートにデータを追加し続ける
-            setInterval(function () {
+            timerChart = setInterval(function () {
                 var time = new Date();
                 // 時点での発行数データを追加
+                var numberOfDataPoints = 50;
                 chart1.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithMongoDB });
                 chart1.options.data[1].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
                 chart1.options.data[2].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithSqlServer });
-                chart1.options.data[0].dataPoints = chart1.options.data[0].dataPoints.slice(-30);
-                chart1.options.data[1].dataPoints = chart1.options.data[1].dataPoints.slice(-30);
-                chart1.options.data[2].dataPoints = chart1.options.data[2].dataPoints.slice(-30);
+                chart1.options.data[0].dataPoints = chart1.options.data[0].dataPoints.slice(-numberOfDataPoints);
+                chart1.options.data[1].dataPoints = chart1.options.data[1].dataPoints.slice(-numberOfDataPoints);
+                chart1.options.data[2].dataPoints = chart1.options.data[2].dataPoints.slice(-numberOfDataPoints);
+                chart1.options.axisY.minimum = chart1.options.data[0].dataPoints[0].y;
 
                 chart2.options.data[0].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithMongoDB });
                 chart2.options.data[1].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithRedis });
                 chart2.options.data[2].dataPoints.push({ x: time, y: numberOfPassportsIssuedWithSqlServer });
 
+                chart3.options.data[0].dataPoints[0].y = sumOfResponseTimesMongoDB / numberOfResponsesMongoDB;
+                chart3.options.data[0].dataPoints[1].y = sumOfResponseTimesRedis / numberOfResponsesRedis;
+                chart3.options.data[0].dataPoints[2].y = sumOfResponseTimesSqlServer / numberOfResponsesSqlServer;
+
+                chart3.render();
                 chart1.render();
                 chart2.render();
-            }, 500);
+            }, 250);
 
             // 許可証を発行し続ける
             const intervalOfIssuingPassport = 250;
-            setInterval(function () {
-                var start = new Date();
+            timerMongoDB = setInterval(function () {
+                var start;
                 $.ajax({
                     url: `${endpoint1}/passports?db=mongodb`,
                     method: 'POST',
@@ -191,21 +316,23 @@
                     },
                     beforeSend: function (xhr, settings) {
                         xhr.setRequestHeader('Authorization', `Bearer ${accessToken1}`);
+                        start = new Date();
                     }
                 }).done(function (data) {
                     if (data.token) {
                         numberOfPassportsIssuedWithMongoDB += 1;
-                        console.log('numberOfPassportsIssuedWithMongoDB:', numberOfPassportsIssuedWithMongoDB);
                     }
                 }).fail(function (jqXHR, textStatus) {
                     console.error(jqXHR, textStatus);
                 }).always(function () {
-                    responseTimeMongoDB = new Date() - start;
+                    sumOfResponseTimesMongoDB += new Date() - start;
+                    numberOfResponsesMongoDB += 1;
+                    console.log('sumOfResponseTimesMongoDB, numberOfResponsesMongoDB', sumOfResponseTimesMongoDB, numberOfResponsesMongoDB);
                 });
             }, intervalOfIssuingPassport);
 
-            setInterval(function () {
-                var start = new Date();
+            timerRedis = setInterval(function () {
+                var start;
                 $.ajax({
                     url: `${endpoint2}/passports?db=redis`,
                     method: 'POST',
@@ -214,21 +341,23 @@
                     },
                     beforeSend: function (xhr, settings) {
                         xhr.setRequestHeader('Authorization', `Bearer ${accessToken2}`);
+                        start = new Date();
                     }
                 }).done(function (data) {
                     if (data.token) {
                         numberOfPassportsIssuedWithRedis += 1;
-                        console.log('numberOfPassportsIssuedWithRedis:', numberOfPassportsIssuedWithRedis);
                     }
                 }).fail(function (jqXHR, textStatus) {
                     console.error(jqXHR, textStatus);
                 }).always(function () {
-                    responseTimeRedis = new Date() - start;
+                    sumOfResponseTimesRedis += new Date() - start;
+                    numberOfResponsesRedis += 1;
+                    console.log('sumOfResponseTimesRedis, numberOfResponsesRedis', sumOfResponseTimesRedis, numberOfResponsesRedis);
                 });
             }, intervalOfIssuingPassport);
 
-            setInterval(function () {
-                var start = new Date();
+            timerSqlServer = setInterval(function () {
+                var start;
                 $.ajax({
                     url: `${endpoint3}/passports?db=sqlserver`,
                     method: 'POST',
@@ -237,18 +366,35 @@
                     },
                     beforeSend: function (xhr, settings) {
                         xhr.setRequestHeader('Authorization', `Bearer ${accessToken3}`);
+                        start = new Date();
                     }
                 }).done(function (data) {
                     if (data.token) {
                         numberOfPassportsIssuedWithSqlServer += 1;
-                        console.log('numberOfPassportsIssuedWithSqlServer:', numberOfPassportsIssuedWithSqlServer);
                     }
                 }).fail(function (jqXHR, textStatus) {
                     console.error(jqXHR, textStatus);
                 }).always(function () {
-                    responseTimeSqlServer = new Date() - start;
+                    sumOfResponseTimesSqlServer += new Date() - start;
+                    numberOfResponsesSqlServer += 1;
+                    console.log('sumOfResponseTimesSqlServer, numberOfResponsesSqlServer', sumOfResponseTimesSqlServer, numberOfResponsesSqlServer);
                 });
             }, intervalOfIssuingPassport);
+        }
+
+        function cancel() {
+            if (timerChart !== undefined) {
+                clearInterval(timerChart);
+            }
+            if (timerMongoDB !== undefined) {
+                clearInterval(timerMongoDB);
+            }
+            if (timerRedis !== undefined) {
+                clearInterval(timerRedis);
+            }
+            if (timerSqlServer !== undefined) {
+                clearInterval(timerSqlServer);
+            }
         }
     </script>
 </body>
