--- a/examples/compareDB.html
+++ b/examples/compareDB.html
@@ -47,7 +47,7 @@
                     <div class="col-lg-12">
                         <form class="form-inline">
                             <div class="form-group">
-                                <input class="form-control" placeholder="リクエスト間隔(秒)">
+                                <input class="form-control" name="intervalOfIssuingPassport" placeholder="リクエスト間隔(ミリ秒)で">
                             </div>
 
                             <button type="button" class="btn btn-default" onclick="execute();">実行</button>
@@ -63,7 +63,7 @@
                                 <h3 class="panel-title">許可証発行数の遷移(直近10秒)</h3>
                             </div>
                             <div class="panel-body">
-                                <div id="chartContainer1" style="width: 100%; height: 500px;"></div>
+                                <div id="chartContainer1" style="width: 100%; height: 400px;"></div>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                                 <h3 class="panel-title">許可証発行数の遷移</h3>
                             </div>
                             <div class="panel-body">
-                                <div id="chartContainer2" style="width: 100%; height: 500px;"></div>
+                                <div id="chartContainer2" style="width: 100%; height: 400px;"></div>
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                                 <h3 class="panel-title">レスポンスタイム平均値DB比較</h3>
                             </div>
                             <div class="panel-body">
-                                <div id="chartContainer3" style="width: 100%; height: 500px;"></div>
+                                <div id="chartContainer3" style="width: 100%; height: 300px;"></div>
                             </div>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-    <script src="http://canvasjs.com/assets/script/canvasjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
 
     <script>
         // 実行開始時からの経過時間
@@ -137,6 +137,11 @@
         var timerSqlServer;
 
         function execute() {
+            // 実行中であれば中止してから
+            if (time !== undefined) {
+                cancel();
+            }
+
             // データ初期化
             time = new Date();
             numberOfPassportsIssuedWithMongoDB = 0;
@@ -305,7 +310,7 @@
             }, 250);
 
             // 許可証を発行し続ける
-            const intervalOfIssuingPassport = 250;
+            const intervalOfIssuingPassport = ($('input[name="intervalOfIssuingPassport"]').val()) ? parseInt($('input[name="intervalOfIssuingPassport"]').val(), 10) : 500;
             timerMongoDB = setInterval(function () {
                 var start;
                 $.ajax({
@@ -383,6 +388,7 @@
         }
 
         function cancel() {
+            time = undefined;
             if (timerChart !== undefined) {
                 clearInterval(timerChart);
             }
