--- a/examples/compareDB.html
+++ b/examples/compareDB.html
@@ -1,7 +1,7 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,84 +30,6 @@
 </head>
 
 <body>
-
-    <div id="wrapper">
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">WAITER dashborad</a>
-            </div>
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-
-            </div>
-        </nav>
-
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <input class="form-control" name="intervalOfIssuingPassport" placeholder="リクエスト間隔(ミリ秒)で">
-                            </div>
-
-                            <button type="button" class="btn btn-default" onclick="execute();">実行</button>
-                            <button type="button" class="btn btn-default" onclick="cancel();">中止</button>
-                        </form>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">許可証発行数の遷移(直近10秒)</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="chartContainer1" style="width: 100%; height: 400px;"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">許可証発行数の遷移</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="chartContainer2" style="width: 100%; height: 400px;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
-
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">レスポンスタイム平均値DB比較</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="chartContainer3" style="width: 100%; height: 300px;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
-        </div>
-        <!-- /#page-wrapper -->
-    </div>
-    <!-- /#wrapper -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
 
     <script>
         // 実行開始時からの経過時間
@@ -156,7 +78,7 @@
 
             // アクセストークンを取得してからグラフ描画を始める
             $.ajax({
-                url: `${endpoint1}/oauth/token`,
+                url: endpoint1 + '/oauth/token',
                 method: 'POST',
                 data: {
                     grant_type: 'client_credentials',
@@ -167,7 +89,7 @@
                 accessToken1 = data.access_token;
 
                 $.ajax({
-                    url: `${endpoint2}/oauth/token`,
+                    url: endpoint2 + '/oauth/token',
                     method: 'POST',
                     data: {
                         grant_type: 'client_credentials',
@@ -178,7 +100,7 @@
                     accessToken2 = data.access_token;
 
                     $.ajax({
-                        url: `${endpoint3}/oauth/token`,
+                        url: endpoint3 + '/oauth/token',
                         method: 'POST',
                         data: {
                             grant_type: 'client_credentials',
@@ -198,7 +120,23 @@
             // チャート初期化
             var chart1 = new CanvasJS.Chart("chartContainer1",
                 {
+                    axisX: {
+                        title: "日時",
+                        titleFontSize: 16,
+                        labelFontSize: 12,
+                        gridThickness: 1,
+                        interval: 1,
+                        intervalType: "second",
+                        // labelFormatter: function (e) {
+                        //     return CanvasJS.formatDate(e.value, "mm:ss");
+                        // },
+                        // labelAngle: -30
+                    },
                     axisY: {
+                        title: "累計許可証発行数",
+                        titleFontSize: 16,
+                        labelFontSize: 12,
+                        gridThickness: 1,
                         minimum: 0,
                         // maximum: 300
                     },
@@ -228,10 +166,25 @@
                             ]
                         }
                     ]
-                });
+                }
+            );
+
             var chart2 = new CanvasJS.Chart("chartContainer2",
                 {
+                    axisX: {
+                        title: "日時",
+                        titleFontSize: 16,
+                        labelFontSize: 12,
+                        // gridThickness: 1,
+                        // interval: 1,
+                        // intervalType: "second",
+                        // labelAngle: -30
+                    },
                     axisY: {
+                        title: "累計許可証発行数",
+                        titleFontSize: 16,
+                        labelFontSize: 12,
+                        gridThickness: 1,
                         minimum: 0,
                         // maximum: 300
                     },
@@ -261,23 +214,29 @@
                             ]
                         }
                     ]
-                });
+                }
+            );
 
             // レスポンスタイム平均値のバーチャート
-            var chart3 = new CanvasJS.Chart("chartContainer3", {
-                axisY: {
-                    minimum: 0,
-                    // maximum: 300
-                },
-                data: [{
-                    type: "bar",
-                    dataPoints: [
-                        { label: "MongoDB", y: 0 },
-                        { label: "Redis", y: 0 },
-                        { label: "SQL Server", y: 0 }
-                    ]
-                }]
-            });
+            var chart3 = new CanvasJS.Chart("chartContainer3",
+                {
+                    axisY: {
+                        title: "レスポンスタイム(ミリ秒)",
+                        titleFontSize: 16,
+                        labelFontSize: 12,
+                        minimum: 0,
+                        // maximum: 300
+                    },
+                    data: [{
+                        type: "bar",
+                        dataPoints: [
+                            { label: "MongoDB", y: 0 },
+                            { label: "Redis", y: 0 },
+                            { label: "SQL Server", y: 0 }
+                        ]
+                    }]
+                }
+            );
 
             chart1.render();
             chart2.render();
@@ -314,13 +273,13 @@
             timerMongoDB = setInterval(function () {
                 var start;
                 $.ajax({
-                    url: `${endpoint1}/passports?db=mongodb`,
+                    url: endpoint1 + '/passports?db=mongodb',
                     method: 'POST',
                     data: {
                         scope: 'testscope'
                     },
                     beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', `Bearer ${accessToken1}`);
+                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken1);
                         start = new Date();
                     }
                 }).done(function (data) {
@@ -339,13 +298,13 @@
             timerRedis = setInterval(function () {
                 var start;
                 $.ajax({
-                    url: `${endpoint2}/passports?db=redis`,
+                    url: endpoint2 + '/passports?db=redis',
                     method: 'POST',
                     data: {
                         scope: 'testscope'
                     },
                     beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', `Bearer ${accessToken2}`);
+                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken2);
                         start = new Date();
                     }
                 }).done(function (data) {
@@ -364,13 +323,13 @@
             timerSqlServer = setInterval(function () {
                 var start;
                 $.ajax({
-                    url: `${endpoint3}/passports?db=sqlserver`,
+                    url: endpoint3 + '/passports?db=sqlserver',
                     method: 'POST',
                     data: {
                         scope: 'testscope'
                     },
                     beforeSend: function (xhr, settings) {
-                        xhr.setRequestHeader('Authorization', `Bearer ${accessToken3}`);
+                        xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken3);
                         start = new Date();
                     }
                 }).done(function (data) {
@@ -403,6 +362,85 @@
             }
         }
     </script>
+
+    <div id="wrapper">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WAITER dashborad</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+            </div>
+        </nav>
+
+        <div id="page-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <input class="form-control" name="intervalOfIssuingPassport" placeholder="リクエスト間隔(ミリ秒)で">
+                            </div>
+
+                            <button type="button" class="btn btn-default" onclick="execute();">実行</button>
+                            <button type="button" class="btn btn-default" onclick="cancel();">中止</button>
+                        </form>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">許可証発行数の遷移(直近10秒)</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer1" style="width: 100%; height: 500px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">許可証発行数の遷移</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer2" style="width: 100%; height: 500px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">レスポンスタイム平均値DB比較</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="chartContainer3" style="width: 100%; height: 300px;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </div>
+        <!-- /#page-wrapper -->
+    </div>
+    <!-- /#wrapper -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
+
 </body>
 
 </html>
