# WAITER-16 ### Changed - [@waiter/domain](https://www.npmjs.com/package/@waiter/domain)をインストール。

--- a/example/console.html
+++ b/example/console.html
@@ -176,7 +176,7 @@
                     url: WAITER_ENDPOINT + '/passports',
                     method: 'POST',
                     data: {
-                        scope: 'testscope'
+                        scope: 'mcdonalds'
                     },
                     beforeSend: function (xhr, settings) {
                         // xhr.setRequestHeader('Authorization', 'Bearer ' + accessToken2);
